2007-05-16  Christian Persch  <chpe@gnome.org>

	* libgnomeui/gnome-thumbnail.c:
	(gnome_thumbnail_factory_generate_thumbnail): Fix critical warnings
	when thumbnailing, and fix some compiler warnings. Part of bug
	#408660.

2007-03-18  Christian Persch  <chpe@gnome.org>

	* libgnomeui/gnome-app-helper.c:
	* libgnomeui/gnome-client.c:
	(gnome_client_module_get_goption_group),
	(gnome_client_module_info_get), (gnome_client_pre_args_parse),
	(gnome_client_post_args_parse):
	* libgnomeui/gnome-color-picker.c:
	(gnome_color_picker_instance_init):
	* libgnomeui/gnome-file-entry.c: (gnome_file_entry_init):
	* libgnomeui/gnome-icon-entry.c: (update_icon),
	(gnome_icon_entry_instance_init):
	* libgnomeui/gnome-pixmap-entry.c: (refresh_preview): Remove or
	de-statify unnecessarily static data, and remove some unused code.

2007-03-18  Christian Persch  <chpe@gnome.org>

	* libgnomeui/Makefile.am:
	* libgnomeui/gnome-about.c:
	* libgnomeui/gnome-app-helper.c:
	* libgnomeui/gnome-app-util.c:
	* libgnomeui/gnome-app.c:
	* libgnomeui/gnome-appbar.c:
	* libgnomeui/gnome-authentication-manager.c:
	* libgnomeui/gnome-client.c:
	* libgnomeui/gnome-color-picker.c:
	* libgnomeui/gnome-dateedit.c:
	* libgnomeui/gnome-dialog-util.c:
	* libgnomeui/gnome-dialog.c:
	* libgnomeui/gnome-druid-page-edge.c:
	* libgnomeui/gnome-druid-page-standard.c:
	* libgnomeui/gnome-druid.c:
	* libgnomeui/gnome-entry.c:
	* libgnomeui/gnome-file-entry.c:
	* libgnomeui/gnome-font-picker.c:
	* libgnomeui/gnome-gconf-ui.c:
	R libgnomeui/gnome-i18nP.h:
	* libgnomeui/gnome-icon-entry.c:
	* libgnomeui/gnome-icon-item.c:
	* libgnomeui/gnome-icon-sel.c:
	* libgnomeui/gnome-mdi-child.c:
	* libgnomeui/gnome-mdi-generic-child.c:
	* libgnomeui/gnome-mdi-session.c:
	* libgnomeui/gnome-mdi.c:
	* libgnomeui/gnome-messagebox.c:
	* libgnomeui/gnome-pixmap-entry.c:
	* libgnomeui/gnome-propertybox.c:
	* libgnomeui/gnome-scores.c:
	* libgnomeui/gnome-stock-icons.c:
	* libgnomeui/gnome-vfs-util.c: